# Paddle2GGUF

./: LICENSE  README.md  main.py  pyproject.toml
llama.cpp/: convert_hf_to_gguf.py
paddle2gguf/: convert.py  main.py
