[project]
name = "paddle2gguf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "megemini", email = "megemini@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "onnx2torch>=1.5.15",
    "paddle2onnx>=2.0.0",
]

[project.scripts]
paddle2gguf = "paddle2gguf.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paddle2gguf"]
