[project]
name = "paddle2gguf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "megemini", email = "megemini@outlook.com" }
]
requires-python = ">=3.9"
dependencies = [
    "gguf>=0.14.0",
    "onnx2torch>=1.5.15",
    "paddle2onnx==1.3.1",
]

[project.scripts]
paddle2gguf = "paddle2gguf.convert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paddle2gguf"]
